fix social card dark mode

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ nav a:active {
 
 h3 {
   font-size: 2rem;
-  opacity: 0.4;
+  opacity: 0.5;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -164,7 +164,7 @@ h3 {
 }
 
 .job-timeline {
-  opacity: 0.4;
+  opacity: 0.5;
   font-style: italic;
   margin-left: 1rem;
 }
@@ -232,11 +232,18 @@ hr {
   width: 85vw;
   max-width: 700px;
   border-radius: 10px;
+  background-color: white;
 }
 
 .social-card:hover {
   background-color: #2dd4bf;
   cursor: pointer;
+}
+
+@media (prefers-color-scheme: dark) {
+  .social-card {
+    background-color: rgb(31, 31, 31);
+  }
 }
 
 .social-text {
@@ -247,7 +254,6 @@ hr {
 
 #github {
   border-radius: 15px;
-  transform: scale(1.25);
 }
 
 @media (prefers-color-scheme: dark) {
